# src/dovecord-react/src/services/types.ts
@@ -4,32 +4,6 @@
  * @version 5
  */
 
-/* tslint:disable */
-/* eslint-disable */
-
-export interface Channel {
-  /**
-   *
-   * - Format: guid
-   */
-  id?: string;
-  messages?: ChannelMessage[];
-  name?: string;
-  recipients?: User[];
-  server?: Server;
-  /**
-   *
-   * - Format: guid
-   */
-  serverId?: string;
-  topic?: string;
-  /**
-   *
-   * - Format: int32
-   */
-  type?: number;
-}
-
 export interface ChannelDto {
   /**
    *
@@ -37,7 +11,6 @@ export interface ChannelDto {
    */
   id?: string;
   name?: string;
-  recipients?: User[];
   /**
    *
    * - Format: guid
@@ -53,11 +26,6 @@ export interface ChannelDto {
 
 export interface ChannelManipulationDto {
   name?: string;
-  /**
-   *
-   * - Format: guid
-   */
-  serverId?: string;
   topic?: string;
   /**
    *
@@ -66,47 +34,8 @@ export interface ChannelManipulationDto {
   type?: number;
 }
 
-export interface ChannelMessage {
-  author?: User;
-  /**
-   *
-   * - Format: guid
-   */
-  authorId?: string;
-  channel?: Channel;
-  /**
-   *
-   * - Format: guid
-   */
-  channelId?: string;
-  content?: string;
-  createdBy?: string;
-  /**
-   *
-   * - Format: date-time
-   */
-  createdOn?: string;
-  /**
-   *
-   * - Format: guid
-   */
-  id?: string;
-  isEdit?: boolean;
-  /**
-   *
-   * - Format: date-time
-   */
-  lastModifiedOn?: string;
-  server?: Server;
-  /**
-   *
-   * - Format: guid
-   */
-  serverId?: string;
-}
-
 export interface ChannelMessageDto {
-  author?: User;
+  author?: UserDto;
   /**
    *
    * - Format: guid
@@ -154,56 +83,25 @@ export interface PutV1MessagesIdQueryParams {
   message?: string;
 }
 
-export interface Server {
-  channels?: Channel[];
+export interface ServerDto {
+  channels?: ChannelDto[];
   iconUrl?: string;
   /**
    *
    * - Format: guid
    */
   id?: string;
-  members?: User[];
+  members?: UserDto[];
   name?: string;
   /**
    *
    * - Format: guid
    */
   ownerUserId?: string;
-}
-
-export interface ServerDto {
-  channels?: Channel[];
-  /**
-   *
-   * - Format: guid
-   */
-  id?: string;
-  members?: User[];
-  name?: string;
-  /**
-   *
-   * - Format: guid
-   */
-  ownerUserId?: string;
-  topic?: string;
 }
 
 export interface ServerManipulationDto {
   name?: string;
-}
-
-export interface User {
-  accentColor?: boolean;
-  bot?: boolean;
-  /**
-   *
-   * - Format: guid
-   */
-  id?: string;
-  isOnline?: boolean;
-  servers?: Server[];
-  system?: boolean;
-  username?: string;
 }
 
 export interface UserCreationDto {
